fixed card spacing in mobile

--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ section {
     }
     .contact-info-item {
         padding: 25px;
+        margin-bottom: 0;
     }
     .contact-info-item i {
         font-size: 2rem;
